[package]
name = "solana-transaction-crawler"
version = "0.0.4"
edition = "2021"
description = "A library to make it easier to crawl Solana transactions."
repository = "https://github.com/samuelvanderwaal/solana-transaction-crawler"
license = "Apache-2.0"

[dependencies]
rayon = "1.5.3"
retry = "1.3.1"
serde = "1.0.139"
solana-client = "~1.9.13"
solana-program = "~1.9.13"
solana-sdk = "~1.9.13"
solana-transaction-status = "~1.9.13"
thiserror = "1.0.31"
tokio = "1.14"
